SUBDIRS = connui conndlgs

dbusdir = $(sysconfdir)/dbus-1/system.d/
dbus_DATA = data/icd-ui.conf

osso_af_initdir = $(sysconfdir)/osso-af-init
osso_af_init_DATA = data/icd-ui.conf

servicesdir = $(datadir)/dbus-1/services/
services_DATA = data/osso-connectivity-ui-conndlgs.service

system_servicesdir = $(datadir)/dbus-1/system-services/
system_services_DATA = data/com.nokia.osso_connectivity_ui_conndlgs.service

pkginclude_HEADERS = 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA	= connui.pc
